# constructor-rag-assistant

./: .gitignore  CONTRIBUTING.md
.githooks/: commit-msg
backend-go/cmd/server/: main.go
backend-go/internal/api/: handler.go
backend-go/internal/config/: config.go
backend-go/internal/rag/: client.go
backend-go/pb/: rag_service.pb.go  rag_service_grpc.pb.go
backend-go/tests/: api_test.go
backend-python/: Dockerfile  pyproject.toml
backend-python/app/: config.py  containers.py  main.py
backend-python/app/llm/: base.py  factory.py
backend-python/app/llm/provider/: __init__.py  dummy_provider.py  gemini_provider.py  local_provider.py  openai_provider.py
backend-python/app/services/: embedding_service.py  rag_service.py
backend-python/pb/: rag_service_pb2.py  rag_service_pb2.pyi  rag_service_pb2_grpc.py  rag_service_pb2_grpc.pyi
backend-python/tests/: conftest.py
backend-python/tests/unit/: test_llm_providers.py  test_rag_service.py
proto/: rag_service.proto
