[project]
name = "backend-python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "grpcio>=1.76.0",
    "grpcio-tools>=1.76.0",
    "mypy-protobuf>=3.7.0",
    "protobuf>=6.33.2",
    "types-protobuf>=6.32.1.20251210",
]
